--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "signal-windows",
   "version": "0.0.1",
-  "description": "Node.js implementation of a framer and signal windowing functions.",
+  "description": "Node.js implementation of a sample framer (Array or Buffer) and signal windowing functions (e.g. Hamming).",
   "license": "MIT",
   "homepage": "https://github.com/vail-systems/node-signal-windows",
   "repository": "vail-systems/node-signal-windows",
@@ -20,8 +20,11 @@
   ],
   "keywords": [
     "framer",
-    "window function",
-    "hamming window",
-    "tukey window"
+    "samples",
+    "audio",
+    "sound",
+    "window",
+    "hamming",
+    "tukey"
   ]
 }
